@@ -63,7 +63,7 @@ const versionT SCID_VERSION = 400;     // Current file format version = 4.0
 const versionT SCID_OLDEST_VERSION = 400; // Oldest compatible format: 4.0
 
 const char SCID_VERSION_STRING[] = "4.1";     // Current Scid version
-const char SCID_VERSION_DATE[] = "November 2009";
+const char SCID_VERSION_DATE[] = "January 2010";
 const char SCID_WEBSITE[] = "http://scid.sourceforge.net/";
 
 const char TREEFILE_SUFFIX[] = ".stc";
