@@ -153,7 +153,11 @@ namespace eval uci {
         if { $t == "multipv" } { incr i ; set uciInfo(multipv$n) [ lindex $data $i ] ; continue }
         if { $t == "score" } {
           incr i
-          set next [ lindex $data $i ]        
+          set next [ lindex $data $i ]
+          # Needed for Prodeo, which is not UCI compliant
+          if { $next != "cp" && $next != "mate" } {
+            return
+          }
           if { $next == "cp" } {
             incr i
             set uciInfo(tmp_score$n) [ lindex $data $i ]
